fix alignment bug

--- a/client/src/components/BookList/BookList.scss
+++ b/client/src/components/BookList/BookList.scss
@@ -1,6 +1,5 @@
 .BookList-single {
   display: flex;
-  justify-content: center;
   margin-bottom: 1.7rem;
 
 }
